--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 <script src="assets/js/core.js"></script>
 
 <!-- JS Google Map -->
-<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
 
 <!-- Styleswitcher -->
 <script src="assets/styleswitcher/styleswitcher.js"></script>
