--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <title>Niraj Patel - ROR Developer</title>
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="assets/img/favicon.png">
+<link rel="shortcut icon" href="assets/img/photos/ror.png">
 <link rel="apple-touch-icon" href="assets/img/favicon_60x60.png">
 <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon_76x76.png">
 <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon_120x120.png">
