--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     </nav>
 
     <!-- Bottom -->
-    <!-- <div class="bottom text-center">
+    <div class="bottom text-center">
         <ul class="nav-icons nav-sm">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="http://stackoverflow.com/users/7488420/niraj-patel" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
+            <li><a href="https://github.com/ror-github" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/niraj-patel-09467a137" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         </ul>
-    </div> -->
+    </div>
 
 </header>
 <!-- Header / End -->
@@ -348,32 +348,6 @@
                         </footer>
                     </blockquote>
                 </div>
-                <div class="masonry-item col-sm-6 col-xs-12">
-                    <!-- Blockquote -->
-                    <blockquote class="animated" data-animation="fadeIn">
-                        <p>Sed lacinia, nibh sit amet auctor vestibulum, enim risus condimentum erat, quis vestibulum mi ligula a nulla. Nulla vitae pharetra tellus.Aenean ac tincidunt augue, volutpat ullamcorper elit.</p>
-                        <footer>
-                            <img src="assets/img/avatars/avatar05.jpg" alt="">
-                            <div class="content">
-                                <span class="name">Jerry Nowak</span>
-                                <div class="caption">CEO at Google Inc.</div>
-                            </div>
-                        </footer>
-                    </blockquote>
-                </div>
-                <div class="masonry-item col-sm-6 col-xs-12">
-                    <!-- Blockquote -->
-                    <blockquote class="animated" data-animation="fadeIn">
-                        <p>Nulla vitae pharetra tellus. Aenean ac tincidunt augue, volutpat ullamcorper elit.</p>
-                        <footer>
-                            <img src="assets/img/avatars/avatar04.jpg" alt="">
-                            <div class="content">
-                                <span class="name">Jerry Nowak</span>
-                                <div class="caption">CEO at Google Inc.</div>
-                            </div>
-                        </footer>
-                    </blockquote>
-                </div>
             </div>
         </div>
 
@@ -403,16 +377,15 @@
                         <div class="col-lg-4">
                             <div class="feature feature-1">
                                 <div class="icon"><span class="ti-mobile"></span></div>
-                                <a href="#" class="h3 font-primary"><small>+48</small> 123 561 672</a>
+                                <a href="#" class="h3 font-primary"><small>+91</small> 76980 60012</a>
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div class="feature feature-1">
                                 <div class="icon"><span class="ti-location-arrow"></span></div>
                                 <address>
-                                    1111-A Nowhere Lane,<br>
-                                    Outta Sight, State 90378,<br>
-                                    USA
+                                    Ahmedabad, Gujarat<br> 
+                                    India - 382350<br>
                                 </address>
                             </div>
                         </div>
@@ -420,13 +393,13 @@
                     <hr class="sep-line">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h5 class="mt-5">Check my social media!</h5>
+                            <h5 class="mt-5">Check my profile on!</h5>
                         </div>
                         <div class="col-sm-6 text-right">
                             <ul class="nav-icons">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="http://stackoverflow.com/users/7488420/niraj-patel" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
+                                <li><a href="https://github.com/ror-github" target="_blank"><i class="fa fa-github"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/niraj-patel-09467a137" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
