--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
         <nav class="filter-bar bg-primary dark">
             <div class="tabs-wrapper">
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
-                    <li class="active"><a href="#" data-filter="*">Web Development</a></li>
-                    <li><a href="#" data-filter=".webdesign">API</a></li>
+                    <li class="active"><a href="javascript.void(0);" data-filter="*">All</a></li>
+                    <li class="active"><a href="javascript.void(0);" data-filter=".web">Web Development</a></li>
+                    <li><a href="javascript.void(0);" data-filter=".api">API</a></li>
                     <!-- <li><a href="#" data-filter=".mobileApps">Mobile Apps</a></li>
                     <li><a href="#" data-filter=".socialMedia">Social Media</a></li> -->
                 </ul>
@@ -215,67 +216,67 @@
         <div id="works-list" class="filter-list row masonry no-spaces">
             <div class="masonry-sizer col-md-4 col-sm-6 col-xs-12"></div>
             <!-- Image Box -->
-            <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work01.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_01.png" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Mountain View</h4>
-                            <span class="text-muted">Mobile Apps</span>
+                        <a href="https://www.sportsbetting.ag" target="_blank">
+                            <h4 class="mb-0">SPORTSBETTING</h4>
+                            <span class="text-muted">Ruby on Rails, PostgreSQL, HTML, CSS, Jquery</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work02.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_02.png" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">On the Beach</h4>
-                            <span class="text-muted">Webdesign</span>
+                        <a href="https://baltzer.com/" target="_blank">
+                            <h4 class="mb-0">BALTZER</h4>
+                            <span class="text-muted">Ruby on Rails, PostgreSQL, HTML, CSS, Jquery</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="socialMedia masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work03.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_03.png" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Cast Away</h4>
-                            <span class="text-muted">Social Media</span>
+                        <a href="https://www.lilyfit.com" target="_blank">
+                            <h4 class="mb-0">LILYFIT</h4>
+                            <span class="text-muted">Ruby on Rails, MySQL, HTML, CSS, Jquery</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work04.jpg" alt=""></a></div>
+                    <div class="image"><a href="http://www.prettyinmypocket.com" target="_blank"><img src="assets/img/project/ror_04.png" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">On the Desert</h4>
-                            <span class="text-muted">Webdesign</span>
+                        <a href="http://www.prettyinmypocket.com" target="_blank">
+                            <h4 class="mb-0">PRETTYINMYPOCKET</h4>
+                            <span class="text-muted">Ruby on Rails, MySQL, HTML, CSS, Jquery</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="api masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work05.jpg" alt=""></a></div>
+                    <div class="image"><a href="http://flightspeak.net" data-toggle="ajax-modal"><img src="assets/img/project/ror_05.png" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Apple MacBook</h4>
-                            <span class="text-muted">Webdesign</span>
+                        <a href="http://flightspeak.net" target="_blank">
+                            <h4 class="mb-0">flightSpeak</h4>
+                            <span class="text-muted">Ruby on Rails, Postgres SQL</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
+            <!-- <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work06.jpg" alt=""></a></div>
                     <div class="hover">
@@ -285,7 +286,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </section>
@@ -294,7 +295,7 @@
     <section id="clients" class="section bg-light">
 
         <div class="container container-custom">
-            <h3 class="text-center mb-80">What clients say?</h3>
+            <h3 class="text-center mb-40">What clients say?</h3>
             <div class="row masonry">
                 <div class="masonry-sizer col-sm-6 col-xs-12"></div>
                 <div class="masonry-item col-sm-6 col-xs-12">
@@ -377,7 +378,7 @@
                         <div class="col-lg-4">
                             <div class="feature feature-1">
                                 <div class="icon"><span class="ti-mobile"></span></div>
-                                <a href="#" class="h3 font-primary"><small>+91</small> 76980 60012</a>
+                                <a class="h3 font-primary"><small>+91</small> 76980 60012</a>
                             </div>
                         </div>
                         <div class="col-lg-3">
