--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 
         <!-- Works List -->
         <div id="works-list" class="filter-list row masonry no-spaces">
-            <div class="masonry-sizer col-md-4 col-sm-6 col-xs-12"></div>
+            <div class="masonry-sizer col-md-6 col-sm-6 col-xs-12"></div>
             <!-- Image Box -->
-            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-6 col-sm-6 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_01.png" alt=""></a></div>
                     <div class="hover">
@@ -227,20 +227,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Image Box -->
-            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
-                <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_02.png" alt=""></a></div>
-                    <div class="hover">
-                        <a href="https://baltzer.com/" target="_blank">
-                            <h4 class="mb-0">BALTZER</h4>
-                            <span class="text-muted">Ruby on Rails, PostgreSQL, HTML, CSS, Jquery</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Image Box -->
-            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-6 col-sm-6 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_03.png" alt=""></a></div>
                     <div class="hover">
@@ -252,7 +239,7 @@
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="web masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-6 col-sm-6 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="http://www.prettyinmypocket.com" target="_blank"><img src="assets/img/project/ror_04.png" alt=""></a></div>
                     <div class="hover">
@@ -263,8 +250,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Image Box -->
-            <div class="api masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="api masonry-item col-md-6 col-sm-6 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="http://flightspeak.net" data-toggle="ajax-modal"><img src="assets/img/project/ror_05.png" alt=""></a></div>
                     <div class="hover">
@@ -274,19 +260,20 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div>            
             <!-- Image Box -->
-            <!-- <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="web masonry-item col-md-6 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work06.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/project/ror_02.png" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">The Tree</h4>
-                            <span class="text-muted">Mobile Apps</span>
+                        <a href="https://baltzer.com/" target="_blank">
+                            <h4 class="mb-0">BALTZER</h4>
+                            <span class="text-muted">Ruby on Rails, PostgreSQL, HTML, CSS, Jquery</span>
                         </a>
                     </div>
                 </div>
-            </div> -->
+            </div>
+            
         </div>
 
     </section>
@@ -301,12 +288,10 @@
                 <div class="masonry-item col-sm-6 col-xs-12">
                     <!-- Blockquote -->
                     <blockquote class="animated" data-animation="fadeIn">
-                        <p>Sed lacinia, nibh sit amet auctor vestibulum, enim risus condimentum erat, quis vestibulum mi ligula a nulla. Nulla vitae pharetra tellus.Aenean ac tincidunt augue, volutpat ullamcorper elit.</p>
+                        <p>Great work, exceptionally great at deadlines -- they work very quickly and always beat my deadlines. They are great programmers and good at solving problems.</p>
                         <footer>
-                            <img src="assets/img/avatars/avatar01.jpg" alt="">
                             <div class="content">
-                                <span class="name">Jerry Nowak</span>
-                                <div class="caption">CEO at Google Inc.</div>
+                                <span class="name">Brian.Dear</span>
                             </div>
                         </footer>
                     </blockquote>
@@ -314,37 +299,11 @@
                 <div class="masonry-item col-sm-6 col-xs-12">
                     <!-- Blockquote -->
                     <blockquote class="animated" data-animation="fadeIn">
-                        <p>Quis vestibulum mi ligula a nulla. Nulla vitae pharetra tellus. Aenean ac tincidunt augue, volutpat ullamcorper elit.</p>
+                        <p>Excellent work, delivered on time and communicated effectively. Will continue to work on future projects.</p>
                         <footer>
                             <div class="content">
-                                <span class="name">Jerry Nowak</span>
-                                <div class="caption">CEO at Google Inc.</div>
-                            </div>
-                        </footer>
-                    </blockquote>
-                </div>
-                <div class="masonry-item col-sm-6 col-xs-12">
-                    <!-- Blockquote -->
-                    <blockquote class="animated" data-animation="fadeIn">
-                        <p>Nibh sit amet auctor vestibulum, enim risus condimentum erat, quis vestibulum mi ligula a nulla. Nulla vitae pharetra tellus.Aenean ac tincidunt augue, volutpat.</p>
-                        <footer>
-                            <img src="assets/img/avatars/avatar02.jpg" alt="">
-                            <div class="content">
-                                <span class="name">Jerry Nowak</span>
-                                <div class="caption">CEO at Google Inc.</div>
-                            </div>
-                        </footer>
-                    </blockquote>
-                </div>
-                <div class="masonry-item col-sm-6 col-xs-12">
-                    <!-- Blockquote -->
-                    <blockquote class="animated" data-animation="fadeIn">
-                        <p>Enim risus condimentum erat, quis vestibulum mi ligula a nulla. Nulla vitae pharetra tellus.Aenean ac tincidunt augue, volutpat ullamcorper elit.</p>
-                        <footer>
-                            <img src="assets/img/avatars/avatar03.jpg" alt="">
-                            <div class="content">
-                                <span class="name">Jerry Nowak</span>
-                                <div class="caption">CEO at Google Inc.</div>
+                                <span class="name">Leo Osahor</span>
+                                <div class="caption">CEO at FlightSpeak</div>
                             </div>
                         </footer>
                     </blockquote>
