--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="tabs-wrapper">
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
                     <li class="active"><a href="javascript.void(0);" data-filter="*">All</a></li>
-                    <li class="active"><a href="javascript.void(0);" data-filter=".web">Web Development</a></li>
+                    <li><a href="javascript.void(0);" data-filter=".web">Web Development</a></li>
                     <li><a href="javascript.void(0);" data-filter=".api">API</a></li>
                     <!-- <li><a href="#" data-filter=".mobileApps">Mobile Apps</a></li>
                     <li><a href="#" data-filter=".socialMedia">Social Media</a></li> -->
