--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="85"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
                             </div>
                             <h5>Ruby on Rails</h5>
                         </div>
@@ -146,9 +146,15 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="85"></div>
                             </div>
                             <h5>AgnularJS</h5>
+                        </div>
+                        <div class="skill">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="100"></div>
+                            </div>
+                            <h5>PostgreSQL</h5>
                         </div>
                     </div>
                 </div>
@@ -183,6 +189,12 @@
                                 <div class="progress-bar" role="progressbar" aria-valuenow="100"></div>
                             </div>
                             <h5>AJAX</h5>
+                        </div>
+                        <div class="skill">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="100"></div>
+                            </div>
+                            <h5>MySQL</h5>
                         </div>
                     </div>
                 </div>
