--- a/index.html
+++ b/index.html
@@ -100,13 +100,14 @@
                 <div class="masonry-item col-sm-12 col-xs-12">
                     <div class="resume-card">
                         <h3 class="title">Career Objectives</h3>
-                        <p>Reaching the heights in the job by implementing the knowledge gained in the world of Information Technology and work optimally to fulfil the need of the organization.</p>
+                        <p>To expand skills and experience within the IT department of company or association. Looking forward to work with a corporation that serves superior products and services.</p>
                     </div>
                     <div class="resume-card">
                         <h3 class="title">Education</h3>
-                        <p>Gujarat Technological University<br> 
-                        Bachelor's degree in Computer Engineering<br>
-                        Year – 2014</p>
+                        <p>IGNOU University, PGDCA<br> 
+                        Gujarat University, Bachelor of Computer Application<br>
+                        RECOGNISED ACHIEVEMENTS<br>
+                        Year – 2013</p>
                     </div>
                     <div class="resume-card">
                         <h3 class="title">Core Qualifications</h3>
@@ -216,7 +217,7 @@
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
                     <li class="active"><a href="javascript.void(0);" data-filter="*">All</a></li>
                     <li><a href="javascript.void(0);" data-filter=".web">Web Development</a></li>
-                    <li><a href="javascript.void(0);" data-filter=".api">API</a></li>
+                    <li><a href="javascript.void(0);" data-filter=".api">Back End - API</a></li>
                     <!-- <li><a href="#" data-filter=".mobileApps">Mobile Apps</a></li>
                     <li><a href="#" data-filter=".socialMedia">Social Media</a></li> -->
                 </ul>
