--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Tejas Shah - ROR Developer</title>
+<title>Niraj Patel - ROR Developer</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="assets/img/photos/ror.png">
@@ -81,7 +81,7 @@
         
         <div class="container container-custom v-center">
             <!-- <a href="#" class="btn-play btn-lg mb-30" data-toggle="video-modal" data-target="#modalVideo" data-video="https://www.youtube.com/embed/uVju5--RqtY"></a> -->
-            <h1 class="text-lg mb-0"><em>Hi! I’m</em> Tejas Shah</h1>
+            <h1 class="text-lg mb-0"><em>Hi! I’m</em> Niraj Patel</h1>
             <p class="lead text-muted">Experienced Back-End Developer (Ruby on Rails)</p>
         </div>
 
