--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 <script src="assets/js/core.js"></script>
 
 <!-- JS Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="assets/js/googleapis.js"></script>
 
 <!-- Styleswitcher -->
 <script src="assets/styleswitcher/styleswitcher.js"></script>
